接入高德地图

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.14&key=a882e480c766326f01ba0e9d4d1f5c6e"></script> 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
